ChangeLog

20031508
	-src/lunar.*
	
	Removed build warnings
	
	Liam Girdwood

20031308
	-src/julian_day.c
	
	Fixed divide by hours bug in get_julian_local_date()
	to divide bu seconds
	
	Pablo Martikian, Liam Girdwood

	-src/mercury.c
	-src/venus.c
	-src/earth.c
	-src/mars.c
	-src/jupiter.c
	-src/saturn.c
	-src/uranus.c
	-src/neptune.c
	-src/pluto.c
	-src/elliptic_motion.c
	-src/parabolic_motion.c
	-src/solar.c
	
	Removed unused variable JD in get_rect_from_helio()
	
	Pablo Martikian, Liam Girdwood

	-src/misc.c
	Fixed uninitialised variable in interpolate5
	
	Pablo Martikian, Liam Girdwood

	-src/nutation.c
	Removed build warnings.
	Uses JD + delta T Chap 22, equ 22.1
	
	Liam Girdwood, Pablo Martikian

20031208
	-src/aberration.*
	-src/misc.c
	Removed build warnings
	
	Pablo Martikian, Liam Girdwood

	-src/libnova.h
	Add extra M_PI_* #defines for windows
	
	Pablo Martikian
	
	-configure.in
	Added -Wall build option
	
	Liam Girdwood

20033007
	-src/julian_day.c
	FreeBSD does not have variable timezone.
	
	Kirill Ponomarew, Liam Girdwood
	
20032907
	-src/julian_day.c
	Fixed return at line 320
	
	Petr Kubanek

**** Release 0.8.0 ****

20032807
	-examples/*
	Added some examples.
	
	Liam Girdwood

20032703
	-src/lunar.c
	Fixed some documentation errors in lunar phase and disk.
	
	Kimura Fuyuku, Liam Girdwood

20032703
	-src/julian_day.c
	Fixed bug stopping get_julian_day() changing parameter.
	
	Kimura Fuyuku, Liam Girdwood

20032803
	-src/libnova.h, libnova.c
	Added sign member to struct ln_dms to represent small negative angles.
	
	John R. Thorstensen, Liam Girdwood


**** Release 0.7.0 ****

20032203
	-src/lunar.c, libnova.h
	Added Lunar longitudes for ascending node and perigee.
	
	Liam Girdwood

20030303
	-src/libnova.h
	typo - cant spell jupiter at line 1148
	
	Arsita Chetan, Liam Girdwood

20030226
	-src/mercury.c - pluto.c, transform.c, solar.c, lunar.c
	replaced atan() with atan2() to remove quadrant errors.
	
	Asrita Chetan, Liam Girdwood

20030226